Updated the OG path for better SEO

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Whatsapp and Facebook Open Graph (OG) Image -->
     <meta
       property="og:image"
-      content="./assets/media/open-graph/og-fb-wa.png"
+      content="https://dg-photography.vercel.app/assets/media/open-graph/og-fb-wa.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -33,7 +33,7 @@
     <!-- X/Twitter Card Image -->
     <meta
       name="x:image"
-      content="./assets/media/open-graph/og-x.png"
+      content="https://dg-photography.vercel.app/assets/media/open-graph/og-x.png"
     />
     <meta property="x:image:width" content="1200" />
     <meta property="x:image:height" content="675" />
@@ -41,7 +41,7 @@
     <!-- LinkedIn Image -->
     <meta
       property="og:image"
-      content="./assets/media/open-graph/og-linkedin.png"
+      content="https://dg-photography.vercel.app/assets/media/open-graph/og-linkedin.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
@@ -49,7 +49,7 @@
     <!-- Pinterest Image -->
     <meta
       property="og:image"
-      content="./assets/media/open-graph/og-pinterest.png"
+      content="https://dg-photography.vercel.app/assets/media/open-graph/og-pinterest.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="900" />
@@ -57,7 +57,7 @@
     <!-- Instagram Image (optional, since Instagram usually uses Facebook's OG image) -->
     <meta
       property="og:image"
-      content="./assets/media/open-graph/og-insta.png"
+      content="https://dg-photography.vercel.app/assets/media/open-graph/og-insta.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
