Developed the about DG section and added aos animation and added script for scroll to specific section if it exist

--- a/index.html
+++ b/index.html
@@ -188,6 +188,210 @@
         </div>
       </section>
       <!-- Hero Section ends here -->
+
+      <!-- About Section -->
+      <section id="about" class="about-section-wrap">
+        <div class="about-section">
+          <div class="container about-inner-wrapper">
+            <div class="media-area">
+              <figure data-aos="zoom-in" class="about-img img-left">
+                <img
+                  src="./assets/media/about-section-left.jpg"
+                  alt="About Dinesh"
+                />
+              </figure>
+              <figure data-aos="zoom-in" class="about-img img-right">
+                <img
+                  src="./assets/media/about-section-right.jpg"
+                  alt="About Dinesh"
+                />
+              </figure>
+            </div>
+            <div class="content-area dg-secondary-text">
+              <p data-aos="fade-right" class="section-label secondary-label">
+                About DG
+              </p>
+
+              <h3 data-aos="fade-left">
+                Dinesh Gahlot, a world class photographer
+              </h3>
+
+              <div data-aos="fade-left" class="content-text">
+                <p>
+                  DG is not just a photographer; he's an artist who captures
+                  moments that last forever. With a love for photography through
+                  generations, Dinesh Gahlot is committed to capturing life's
+                  beauty in his photos, making memories eternal through his
+                  lens.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
+        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
+        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
+        est doloremque!
+      </p>
     </main>
 
     <!-- Footer -->
