Removed the dummy lorem ipsum text from the markup structure I have added for testing the scroll to section function and modified the scroll to section function for mobile menu to close the mobile menu so it visible the scrolled section

--- a/index.html
+++ b/index.html
@@ -229,169 +229,7 @@
           </div>
         </div>
       </section>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-        possimus neque alias incidunt. Dolor debitis tempora odio consectetur,
-        est laboriosam eaque culpa amet. Explicabo pariatur corrupti perferendis
-        est doloremque!
-      </p>
+      <!-- About Section ends here -->
     </main>
 
     <!-- Footer -->
