Added corporate portfolio slider for work highlight

--- a/index.html
+++ b/index.html
@@ -230,6 +230,85 @@
         </div>
       </section>
       <!-- About Section ends here -->
+
+      <!-- Portfolio Section -->
+      <section class="portfolio-section-wrap">
+        <div class="corporate-portfolio-section">
+          <div class="corporate-portfolio-inner-wrapper">
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-1.png"
+                alt="Corporate Portfolio 1"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-2.png"
+                alt="Corporate Portfolio 2"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-1.png"
+                alt="Corporate Portfolio 1"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-2.png"
+                alt="Corporate Portfolio 2"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-1.png"
+                alt="Corporate Portfolio 1"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-2.png"
+                alt="Corporate Portfolio 2"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-1.png"
+                alt="Corporate Portfolio 1"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-2.png"
+                alt="Corporate Portfolio 2"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-1.png"
+                alt="Corporate Portfolio 1"
+                class="portfolio-logo"
+              />
+            </div>
+            <div class="corporate-portfolio-itm">
+              <img
+                src="./assets/media/portfolio/slider/portfolio-slider-2.png"
+                alt="Corporate Portfolio 2"
+                class="portfolio-logo"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Portfolio Section -->
     </main>
 
     <!-- Footer -->
