Developed the portfolio section with masonary gallery

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <!-- About Section ends here -->
 
       <!-- Portfolio Section -->
-      <section class="portfolio-section-wrap">
+      <section id="portfolio" class="portfolio-section-wrap">
         <div class="corporate-portfolio-section">
           <div class="corporate-portfolio-inner-wrapper">
             <div class="corporate-portfolio-itm">
@@ -307,8 +307,101 @@
             </div>
           </div>
         </div>
+
+        <!-- Note for Nitish: Here for highlight of the work above I've created the marquee type slider with corporate work, and below have added the masonary layout as per the loom video description -->
+        <div class="portfolio-gallery-section container">
+          <div class="portfolio-gallery-inner-wrapper">
+            <div class="portfolio-column column-1">
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-1.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-4.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-7.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-10.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-13.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-16.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-19.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-22.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-25.jpg" alt="Kanya Dan Caremony">
+              </div>
+            </div>
+            <div class="portfolio-column column-2">
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-2.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-5.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-8.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-11.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-14.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-17.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-20.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-23.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-26.jpg" alt="Kanya Dan Caremony">
+              </div>
+            </div>
+            <div class="portfolio-column column-3">
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-3.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-6.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-9.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-12.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-15.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-18.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-21.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-24.jpg" alt="Kanya Dan Caremony">
+              </div>
+              <div class="portfolio-gallery-itm">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-27.jpg" alt="Kanya Dan Caremony">
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
-      <!-- Portfolio Section -->
+      <!-- Portfolio Section ends here -->
     </main>
 
     <!-- Footer -->
