--- a/index.html
+++ b/index.html
@@ -313,95 +313,95 @@
           <div class="portfolio-gallery-inner-wrapper">
             <div class="portfolio-column column-1">
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-1.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-1.jpg" alt="Kanya Dan Ceremony">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-4.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-4.jpg" alt="Taj Mahal from Window">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-7.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-7.jpg" alt="Rani Vav">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-10.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-10.jpg" alt="Esso">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-13.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-13.jpg" alt="Indian Train">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-16.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-16.jpg" alt="Indian lady with Water Pot">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-19.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-19.jpg" alt="Random Bike">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-22.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-22.jpg" alt="Drawing Room">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-25.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-25.jpg" alt="Wedding Ceremony">
               </div>
             </div>
             <div class="portfolio-column column-2">
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-2.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-2.jpg" alt="Boat in water">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-5.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-5.jpg" alt="Red tree">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-8.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-8.jpg" alt="Haldi Ceremony">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-11.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-11.jpg" alt="Girl in Formal wear">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-14.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-14.jpg" alt="Wedding Hand Shake Ceremony">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-17.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-17.jpg" alt="Sun Temple - Modhera">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-20.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-20.jpg" alt="Taj Mahal">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-23.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-23.jpg" alt="Buildings">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-26.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-26.jpg" alt="Wedding Ceremony">
               </div>
             </div>
             <div class="portfolio-column column-3">
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-3.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-3.jpg" alt="Taj Mahal">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-6.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-6.jpg" alt="Ring Ceremony">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-9.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-9.jpg" alt="Folk Dance">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-12.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-12.jpg" alt="Peacock">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-15.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-15.jpg" alt="Space Craft">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-18.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-18.jpg" alt="Wedding Ceremony">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-21.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-21.jpg" alt="Holi - Festival of colors">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-24.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-24.jpg" alt="Girl in Saree">
               </div>
               <div class="portfolio-gallery-itm">
-                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-27.jpg" alt="Kanya Dan Caremony">
+                <img class="gallery-img" src="./assets/media/portfolio/masonary/gallery-itm-27.jpg" alt="Wedding Venue">
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- Portfolio Section ends here -->
+      <!-- Portfolio Section ends here-->
     </main>
 
     <!-- Footer -->
